--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -3,5 +3,5 @@
     <h1> Welcome to Scheduled Tweets! </h1>
     
 </div>
-
-<%= button_to "Connect Twitter", "/auth/twitter", method: :post, :data => {turbo: "false"}, class: "btn btn-primary"%>
+ 
+<%= button_to "Connect Twitter", "/auth/twitter", method: :post, class: "btn btn-primary"%>
